--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>PartyKit: Everything's better with friends!</title>
-    <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="PartyKit" />
-    <meta name="description" content="Everything's better with friends!" />
-    <meta name="author" content="PartyKit" />
-    <!-- Theme Colour -->
-    <meta name="theme-color" content="#ffffff" />
-
-    <link rel="stylesheet" href="/normalize.css" />
-    <link rel="stylesheet" href="/dist/client.css" />
-  </head>
+<html>
+  <link
+    rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎉</text></svg>"
+  />
   <body>
-    <div id="app">
-      <h1>🎈 Welcome to PartyKit!</h1>
-    </div>
+    <h1>PartyKit + Yjs</h1>
+    <button id="y-connect-btn">Connect</button>
+    <br />
+    <br />
+    <input id="y-input-message" placeholder="Message to Broadcast" disabled />
+    <br />
+    <br />
+    <button id="y-send-btn" disabled>
+      Please Connect Before Broadcasting Message
+    </button>
+    <button id="y-reset-btn" disabled>Please Connect Before Resetting</button>
+
+    <p>Current Broadcasted Message: <span id="y-text"> </span></p>
+    <p id="y-connected"></p>
     <script type="module" src="/dist/client.js"></script>
   </body>
 </html>
